fixing event height - modal title was cut off

--- a/src/styles/EventModal.module.css
+++ b/src/styles/EventModal.module.css
@@ -44,7 +44,8 @@
   .modalHero {
     position: relative;
     height: 260px;
-    flex-shrink: 0;
+    min-height: 120px;
+    flex-shrink: 1;
     overflow: hidden;
     background: var(--color-dark-2);
   }
@@ -367,12 +368,7 @@
     flex-shrink: 0;
   }
   
-  /* Responsive swap */
   @media (max-width: 768px) {
-    /* .title {
-      font-size: 1.8rem;
-    } */
-
     .value {
       font-weight: 500;
       font-size: 14px;
@@ -386,3 +382,14 @@
       display: inline-block;
     }
   }
+
+  @media (max-height: 700px) {
+  .modal {
+    height: 95vh;
+    max-height: 95vh;
+  }
+
+  .modalHero {
+    height: 180px;
+  }
+}
